Fixed a few text alignments

--- a/examples.css
+++ b/examples.css
@@ -341,6 +341,7 @@ div#section0.section.fp-section.fp-table.active{
 	float: left;
 	width: 66%;
 	text-align: justify;
+    padding-top: 90px;
 }
 
 .clr {
